--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
-<html><body><h1> propert for sale</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Find the best plots for sale in Hanumangarh. Explore our listings and contact us for more information.">
+    <meta name="keywords" content="Plot for sale, Hanumangarh, Real Estate, Property, Land">
+    <meta name="author" content="Your Name">
+    <title>Plot for Sale in Hanumangarh</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .hero {
+            background: url('hero-image.jpg') no-repeat center center/cover;
+            height: 100vh;
+            color: white;
+            text-align: center;
+            padding-top: 200px;
+        }
+        .hero h1 {
+            font-size: 4rem;
+        }
+        .hero p {
+            font-size: 1.5rem;
+        }
+        .property-listing {
+            padding: 20px;
+        }
+        .property-item {
+            margin-bottom: 20px;
+        }
+        .property-item img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Hanumangarh Real Estate</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <div class="hero">
+        <h1>Plot for Sale in Hanumangarh</h1>
+        <p>Find your dream plot in the heart of Hanumangarh</p>
+    </div>
+
+    <!-- Property Listings -->
+    <div class="container property-listing">
+        <h2>Featured Plots</h2>
+        <div class="row">
+            <div class="col-md-4 property-item">
+                <img src="plot1.jpg" alt="Plot for sale in Hanumangarh">
+                <h3>Plot 1</h3>
+                <p>Beautiful plot located in a prime area of Hanumangarh. Perfect for building your dream home.</p>
+                <a href="#" class="btn btn-primary">View Details</a>
+            </div>
+            <div class="col-md-4 property-item">
+                <img src="plot2.jpg" alt="Plot for sale in Hanumangarh">
+                <h3>Plot 2</h3>
+                <p>Spacious plot with easy access to amenities. Ideal for residential or commercial development.</p>
+                <a href="#" class="btn btn-primary">View Details</a>
+            </div>
+            <div class="col-md-4 property-item">
+                <img src="plot3.jpg" alt="Plot for sale in Hanumangarh">
+                <h3>Plot 3</h3>
+                <p>Affordable plot in a peaceful neighborhood. Great investment opportunity.</p>
+                <a href="#" class="btn btn-primary">View Details</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-light text-center py-3">
+        <p>&copy; 2023 Hanumangarh Real Estate. All rights reserved.</p>
+    </footer>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
+Explanation:
+Meta Tags: Includes meta tags for description, keywords, and author to improve SEO.
+Bootstrap: Uses Bootstrap for responsive design and styling.
+Hero Section: A visually appealing hero section with a background image and a call-to-action.
+Property Listings: Displays featured plots with images, descriptions, and buttons for more details.
+Navigation: A simple navigation bar for easy navigation.
+Footer: A footer with copyright information.
+SEO Tips:
+Use relevant keywords in your content.
+Ensure all images have descriptive alt attributes.
+Use header tags (<h1>, <h2>, etc.) to structure your content.
+Include internal and external links where appropriate.
+Ensure your website is mobile-friendly and loads quickly.
+You can further customize this template by adding more sections, improving the design, and adding more SEO-friendly content.
