--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .hero {
             background: url('hero-image.jpg') no-repeat center center/cover;
             height: 100vh;
-            color: white;
+            color: black;
             text-align: center;
             padding-top: 200px;
         }
