--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Find the best plots for sale in Hanumangarh. Explore our listings and contact us for more information.">
     <meta name="keywords" content="Plot for sale, Hanumangarh, Real Estate, Property, Land">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Property Dealer">
     <title>Plot for Sale in Hanumangarh</title>
    <!-- Bootstrap CSS -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -40,7 +40,6 @@
     </style>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Hanumangarh Real Estate</a>
@@ -50,13 +49,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="http://sunnypropertyadvisor.github.io/plot-for-sale">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="http://github.com/property-dealer">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="http://sunnypropertyadvisor.github.io/property-dealer-hanumangarh">Contact</a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="http://maps.app.goo.gl/XvGWgbtJdWiZjBtK7?g_st=com.google.map-s.preview.copy">Business</a>
                 </li>
             </ul>
         </div>
@@ -66,55 +68,53 @@
     <div class="hero">
         <h1>Plot for Sale in Hanumangarh</h1>
         <p>Find your dream plot in the heart of Hanumangarh</p>
-    </div>
+        <div class="container">
+        <h1 class="my-4">Sunny Property Dealer</h1>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <img class="card-img-top" src="https://i.ibb.co/CpGGS7B3/39b9c137-f054-4d4b-85c5-705d3bdcf29b.jpg" alt="Image 1">
+                    <div class="card-body">
+                        <h4 class="card-title">Sunny Property Dealer</h4>
+                        <p class="card-text">Plot For Sale in Hanumangarh</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <!-- Property Listings -->
     <div class="container property-listing">
         <h2>Featured Plots</h2>
         <div class="row">
             <div class="col-md-4 property-item">
-                <img src="plot1.jpg" alt="Plot for sale in Hanumangarh">
+                <img src="https://i.ibb.co/mCSkkX63/freepik-the-style-is-candid-image-photography-with-natural-3406.png" alt="Plot for sale in Hanumangarh">
                 <h3>Plot 1</h3>
                 <p>Beautiful plot located in a prime area of Hanumangarh. Perfect for building your dream home.</p>
-                <a href="#" class="btn btn-primary">View Details</a>
+                <a href="https://youtu.be/DE3iwy1AeTs?si=Wkcin7yBMQHnDbEa" class="btn btn-primary">View Details</a>
             </div>
             <div class="col-md-4 property-item">
-                <img src="plot2.jpg" alt="Plot for sale in Hanumangarh">
+                <img src="https://i.ibb.co/RGkPjtJm/9fec2890-ee61-422a-a94c-4e5c3d228044.jpg" alt="Plot for sale in Hanumangarh">
                 <h3>Plot 2</h3>
                 <p>Spacious plot with easy access to amenities. Ideal for residential or commercial development.</p>
-                <a href="#" class="btn btn-primary">View Details</a>
+                <a href="https://youtu.be/lM6Xfe54Xa8?si=cMXBlxt9ITtE2fJn" class="btn btn-primary">View Details</a>
             </div>
             <div class="col-md-4 property-item">
-                <img src="plot3.jpg" alt="Plot for sale in Hanumangarh">
+                <img src="https://i.ibb.co/rGzZ1zd8/c1e59506-aa6d-479c-8269-60157af3fdce.jpg" alt="Plot for sale in Hanumangarh">
                 <h3>Plot 3</h3>
                 <p>Affordable plot in a peaceful neighborhood. Great investment opportunity.</p>
-                <a href="#" class="btn btn-primary">View Details</a>
+                <a href="https://youtu.be/UpQ33kMG-Oc?si=8fbiGN_uJEJrVLcp" class="btn btn-primary">View Details</a>
             </div>
         </div>
     </div>
 
     <!-- Footer -->
     <footer class="bg-light text-center py-3">
-        <p>&copy; 2023 Hanumangarh Real Estate. All rights reserved.</p>
+        <p>&copy; 2025 Hanumangarh Real Estate. All rights reserved.</p>
     </footer>
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
-Explanation:
-Meta Tags: Includes meta tags for description, keywords, and author to improve SEO.
-Bootstrap: Uses Bootstrap for responsive design and styling.
-Hero Section: A visually appealing hero section with a background image and a call-to-action.
-Property Listings: Displays featured plots with images, descriptions, and buttons for more details.
-Navigation: A simple navigation bar for easy navigation.
-Footer: A footer with copyright information.
-SEO Tips:
-Use relevant keywords in your content.
-Ensure all images have descriptive alt attributes.
-Use header tags (<h1>, <h2>, etc.) to structure your content.
-Include internal and external links where appropriate.
-Ensure your website is mobile-friendly and loads quickly.
-You can further customize this template by adding more sections, improving the design, and adding more SEO-friendly content.
