--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             max-width: 100%;
             height: auto;
         }
+        .center {
+           display: block;
+           margin-left: auto;
+           margin-right: auto;
+           width: 50%;
+        }
     </style>
 </head>
 <body>
@@ -68,8 +74,8 @@
     <div class="hero">
         <h1>Plot for Sale in Hanumangarh</h1>
         <p>Find your dream plot in the heart of Hanumangarh</p>
+        <div class="class="center">
         <div class="container">
-        <h1 class="my-4">Sunny Property Dealer</h1>
         <div class="row">
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
@@ -81,6 +87,8 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
 
     <!-- Property Listings -->
     <div class="container property-listing">
