--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <div class="hero">
         <h1>Plot for Sale in Hanumangarh</h1>
         <p>Find your dream plot in the heart of Hanumangarh</p>
-        <div class="class="center">
         <div class="container">
+        <div class="center">
         <div class="row">
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
