--- a/index.html
+++ b/index.html
@@ -37,12 +37,6 @@
             max-width: 100%;
             height: auto;
         }
-        .center {
-           display: block;
-           margin-left: auto;
-           margin-right: auto;
-           width: 50%;
-        }
     </style>
 </head>
 <body>
@@ -74,22 +68,8 @@
     <div class="hero">
         <h1>Plot for Sale in Hanumangarh</h1>
         <p>Find your dream plot in the heart of Hanumangarh</p>
-        <div class="container">
-        <div class="center">
-        <div class="row">
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                    <img class="card-img-top" src="https://i.ibb.co/CpGGS7B3/39b9c137-f054-4d4b-85c5-705d3bdcf29b.jpg" alt="Image 1">
-                    <div class="card-body">
-                        <h4 class="card-title">Sunny Property Dealer</h4>
-                        <p class="card-text">Plot For Sale in Hanumangarh</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+       <img src="https://i.ibb.co/CpGGS7B3/39b9c137-f054-4d4b-85c5-705d3bdcf29b.jpg" alt="plot for sale">
     </div>
-</div>
-
     <!-- Property Listings -->
     <div class="container property-listing">
         <h2>Featured Plots</h2>
