--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: Arial, sans-serif;
         }
         .hero {
-            background: url('https://i.ibb.co/CpGGS7B3/39b9c137-f054-4d4b-85c5-705d3bdcf29b.jpg') no-repeat center center/cover;
+            background: url('') no-repeat center center/cover;
             height: 100vh;
             color: black;
             text-align: center;
@@ -68,7 +68,7 @@
     <div class="hero">
         <h1>Plot for Sale in Hanumangarh</h1>
         <p>Find your dream plot in the heart of Hanumangarh</p>
-       <img src="" alt="plot for sale">
+       <img src="https://i.ibb.co/CpGGS7B3/39b9c137-f054-4d4b-85c5-705d3bdcf29b.jpg" class="rounded mx-auto d-block" alt="plot for sale">
     </div>
     <!-- Property Listings -->
     <div class="container property-listing">
