--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         body {
             font-family: Arial, sans-serif;
         }
-        .hero {
-            background: url('') no-repeat center center/cover;
-            height: 100vh;
-            color: black;
-            text-align: center;
-            padding-top: 200px;
+       .hero {
+        height: 100vh;
+        color: black;
+        text-align: center;
+        padding-top: 200px;
         }
+
         .hero h1 {
             font-size: 4rem;
         }
@@ -68,7 +68,9 @@
     <div class="hero">
         <h1>Plot for Sale in Hanumangarh</h1>
         <p>Find your dream plot in the heart of Hanumangarh</p>
-       <img src="https://i.ibb.co/CpGGS7B3/39b9c137-f054-4d4b-85c5-705d3bdcf29b.jpg" class="rounded mx-auto d-block" alt="plot for sale">
+        <div class="text-center">
+  <img src="https://i.ibb.co/CpGGS7B3/39b9c137-f054-4d4b-85c5-705d3bdcf29b.jpg" class="rounded" alt="...">
+    </div>
     </div>
     <!-- Property Listings -->
     <div class="container property-listing">
