--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
         <h1>Plot for Sale in Hanumangarh</h1>
         <p>Find your dream plot in the heart of Hanumangarh</p>
         <div class="text-center">
-  <img src="https://i.ibb.co/CpGGS7B3/39b9c137-f054-4d4b-85c5-705d3bdcf29b.jpg" class="rounded" alt="...">
+            <div class="container">
+        <div class="row">
+            <div class="col-md-4 property-item">
+                <img src="https://i.ibb.co/CpGGS7B3/39b9c137-f054-4d4b-85c5-705d3bdcf29b.jpg" class="img-fluid" alt="plot for sale in hanumangarh">
+            </div>
     </div>
     </div>
     <!-- Property Listings -->
