--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Find the best plots for sale in Hanumangarh. Explore our listings and contact us for more information.">
     <meta name="keywords" content="Plot for sale, Hanumangarh, Real Estate, Property, Land">
     <meta name="author" content="Property Dealer">
+    <meta name="google-site-verification" content="khIe5p4hdf5Bx6rFb3Tzn0yN9L-J57xiJ6sAmUH2JBw" />
     <title>Plot for Sale in Hanumangarh</title>
    <!-- Bootstrap CSS -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
